// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Item.svelte > Should render default 1`] = `
<body>
  <div>
     
    
  </div>
</body>
`;

exports[`Item.svelte > Should render empty when field mapping is invalid 1`] = `
<body>
  <div>
    
     
    
  </div>
</body>
`;

exports[`Item.svelte > Should render icon 1`] = `
<body>
  <div>
    <icon
      aria-label="info"
      class="flex flex-shrink-0 items-center justify-center "
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="info"
      />
    </icon>
    
     
    <p
      class="w-full flex"
    >
      hello
    </p>
    
  </div>
</body>
`;

exports[`Item.svelte > Should render icon based on state 1`] = `
<body>
  <div>
    <icon
      aria-label="info"
      class="flex flex-shrink-0 items-center justify-center "
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="info"
      />
    </icon>
    
     
    <p
      class="w-full flex"
    >
      hello
    </p>
    
  </div>
</body>
`;

exports[`Item.svelte > Should render image 1`] = `
<body>
  <div>
    <img
      alt="hello"
      class="h-4 w-4 object-cover"
      src="https://example.com/img.png"
    />
    
     
    <p
      class="w-full flex"
    >
      hello
    </p>
    
  </div>
</body>
`;

exports[`Item.svelte > Should render image and icon 1`] = `
<body>
  <div>
    <icon
      aria-label="info"
      class="flex flex-shrink-0 items-center justify-center "
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="info"
      />
    </icon>
    
     
    <p
      class="w-full flex"
    >
      hello
    </p>
    
  </div>
</body>
`;

exports[`Item.svelte > Should render null 1`] = `
<body>
  <div>
     
    
  </div>
</body>
`;

exports[`Item.svelte > Should render object 1`] = `
<body>
  <div>
    
     
    <p
      class="w-full flex"
    >
      hello
    </p>
    
  </div>
</body>
`;

exports[`Item.svelte > Should render using field mapping 1`] = `
<body>
  <div>
    <icon
      aria-label="info"
      class="flex flex-shrink-0 items-center justify-center "
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="info"
      />
    </icon>
    
     
    <p
      class="w-full flex"
    >
      hello
    </p>
    
  </div>
</body>
`;

exports[`Item.svelte > Should render value 1`] = `
<body>
  <div>
     
    <p
      class="w-full flex"
    >
      text
    </p>
    
  </div>
</body>
`;

exports[`Item.svelte > Should render with value 1`] = `
<body>
  <div>
     
    <p
      class="w-full flex"
    >
      text
    </p>
    
  </div>
</body>
`;

exports[`Item.svelte > Should update when value changes 1`] = `
<body>
  <div>
    
     
    <p
      class="w-full flex"
    >
      hello
    </p>
    
  </div>
</body>
`;

exports[`Item.svelte > Should update when value changes 2`] = `
<body>
  <div>
    
     
    <p
      class="w-full flex"
    >
      hello
    </p>
    
  </div>
</body>
`;
